[Minor] Simplify `SummaryService` type references in `SummaryResource`
Replaced fully qualified `SummaryService` type references with static imports to improve code readability. Adjusted loops and variable declarations accordingly for consistency with the updated imports.